P4/esp_sint.output
Terminales no usados en la gramática

    EXPR_LISTA_IZQ
    EXPR_LISTA_DER
    OP_UN_DELANTE
    OP_BIN_TERN_SEG
    OP_BINARIO
    OP_UNARIO
    OP_UN_BIN
    OP_BINARIO_LISTAS
    OP_TER_LIST


Estado 105 conflictos: 1 desplazamiento/reducción
Estado 106 conflictos: 1 desplazamiento/reducción
Estado 107 conflictos: 1 desplazamiento/reducción
Estado 108 conflictos: 1 desplazamiento/reducción
Estado 109 conflictos: 1 desplazamiento/reducción
Estado 110 conflictos: 1 desplazamiento/reducción
Estado 144 conflictos: 8 desplazamiento/reducción
Estado 145 conflictos: 1 desplazamiento/reducción
Estado 146 conflictos: 1 desplazamiento/reducción
Estado 147 conflictos: 1 desplazamiento/reducción
Estado 148 conflictos: 1 desplazamiento/reducción
Estado 149 conflictos: 1 desplazamiento/reducción
Estado 150 conflictos: 1 desplazamiento/reducción
Estado 159 conflictos: 1 desplazamiento/reducción
Estado 173 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: CABECERA_PROGRAMA bloque

    2 $@1: ε

    3 bloque: LLAVE_IZQ $@1 Declar_de_variables_locales Declar_de_subprogs Sentencia_opt LLAVE_DER

    4 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    5                   | ε

    6 $@2: ε

    7 Declar_subprog: Cabecera_subprog $@2 bloque

    8 $@3: ε

    9 Declar_de_variables_locales: IVAR $@3 decl_variables FVAR
   10                            | ε

   11 decl_variables: decl_variables lista_variables
   12               | lista_variables

   13 $@4: ε

   14 lista_variables: tipo $@4 lista_ident PYC

   15 lista_ident: lista_ident COMA IDENTIFICADOR
   16            | IDENTIFICADOR
   17            | error

   18 tipo: TIPO_PRIM
   19     | TIPO_LISTA TIPO_PRIM

   20 $@5: ε

   21 Cabecera_subprog: tipo IDENTIFICADOR $@5 PAR_IZQ lista_arg PAR_DER

   22 lista_arg: argumentos
   23          | ε

   24 argumentos: tipo IDENTIFICADOR
   25           | argumentos COMA tipo IDENTIFICADOR
   26           | error

   27 Sentencia_opt: Sentencias
   28              | ε

   29 $@6: ε

   30 Sentencias: Sentencias $@6 Sentencia

   31 $@7: ε

   32 Sentencias: $@7 Sentencia

   33 Sentencia: bloque
   34          | sentencia_if
   35          | sentencia_while
   36          | sentencia_entrada
   37          | sentencia_salida
   38          | sentencia_return
   39          | sentencia_repeat
   40          | sentencia_asignacion
   41          | sentencia_listas
   42          | error

   43 sentencia_entrada: NOMB_ENTRADA lista_variables_entrada PYC

   44 sentencia_salida: NOMB_SALIDA lista_expresiones_o_cadena PYC

   45 sentencia_listas: LISTA_SENT_IZQ IDENTIFICADOR
   46                 | IDENTIFICADOR LISTA_SENT_DER

   47 expresion: PAR_IZQ expresion PAR_DER
   48          | OP_UN_NEG expresion
   49          | OP_MAS_MENOS expresion
   50          | expresion OP_MAS_MENOS expresion
   51          | OP_MAS_MAS expresion
   52          | OP_MENOS_MENOS expresion
   53          | expresion OP_BIN_MULTDIV expresion
   54          | expresion OP_RELACION expresion
   55          | expresion OP_IGUALDAD expresion
   56          | expresion OP_LOGICOS_OR expresion
   57          | expresion OP_LOGICOS_AND expresion
   58          | OP_UN_SHARP expresion
   59          | OP_UN_QUEST expresion
   60          | expresion OP_BIN_TERN_PRIM expresion
   61          | expresion OP_BIN_TERN_PRIM expresion OP_MAS_MAS expresion
   62          | IDENTIFICADOR
   63          | constante
   64          | lista
   65          | llamada_funcion
   66          | error

   67 constante: constante_base
   68          | constante_lista

   69 constante_base: CONST_INT
   70               | CONST_FLOAT
   71               | CONST_BOOL
   72               | CONST_CHAR

   73 constante_lista: CORCH_IZQ constante_lista_int CORCH_DER
   74                | CORCH_IZQ constante_lista_float CORCH_DER
   75                | CORCH_IZQ constante_lista_bool CORCH_DER
   76                | CORCH_IZQ constante_lista_char CORCH_DER

   77 constante_lista_int: constante_lista_int COMA CONST_INT
   78                    | CONST_INT

   79 constante_lista_float: constante_lista_float COMA CONST_FLOAT
   80                      | CONST_FLOAT

   81 constante_lista_bool: constante_lista_bool COMA CONST_BOOL
   82                     | CONST_BOOL

   83 constante_lista_char: constante_lista_char COMA CONST_CHAR
   84                     | CONST_CHAR

   85 sentencia_asignacion: IDENTIFICADOR ASIGN expresion PYC

   86 sentencia_if: ID_IF PAR_IZQ expresion PAR_DER Sentencia
   87             | ID_IF PAR_IZQ expresion PAR_DER Sentencia ID_ELSE Sentencia

   88 sentencia_while: ID_WHILE PAR_IZQ expresion PAR_DER Sentencia

   89 sentencia_repeat: ID_REPEAT Sentencia ID_UNTIL PAR_IZQ expresion PAR_DER PYC

   90 @8: ε

   91 sentencia_return: ID_RETURN expresion @8 PYC

   92 lista_variables_entrada: lista_variables_entrada COMA IDENTIFICADOR
   93                        | IDENTIFICADOR

   94 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expresion
   95                           | lista_expresiones_o_cadena COMA CADENA
   96                           | expresion
   97                           | sentencia_listas
   98                           | CADENA

   99 lista: CORCH_IZQ lista_variables_entrada CORCH_DER

  100 llamada_funcion: IDENTIFICADOR PAR_IZQ lista_expresiones PAR_DER

  101 lista_expresiones: lista_expresiones COMA expresion
  102                  | expresion
  103                  | ε


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 17 26 42 66
    CABECERA_PROGRAMA (258) 1
    TIPO_PRIM (259) 18 19
    TIPO_LISTA (260) 19
    ID_IF (261) 86 87
    ID_ELSE (262) 87
    ID_WHILE (263) 88
    ID_REPEAT (264) 89
    ID_UNTIL (265) 89
    ID_RETURN (266) 91
    NOMB_ENTRADA (267) 43
    NOMB_SALIDA (268) 44
    LISTA_SENT_DER (269) 46
    LISTA_SENT_IZQ (270) 45
    EXPR_LISTA_IZQ (271)
    EXPR_LISTA_DER (272)
    OP_UN_DELANTE (273)
    OP_BIN_TERN_PRIM (274) 60 61
    OP_BIN_TERN_SEG (275)
    OP_BINARIO (276)
    OP_UNARIO (277)
    OP_UN_BIN (278)
    IDENTIFICADOR (279) 15 16 21 24 25 45 46 62 85 92 93 100
    CADENA (280) 95 98
    PAR_IZQ (281) 21 47 86 87 88 89 100
    PAR_DER (282) 21 47 86 87 88 89 100
    CORCH_IZQ (283) 73 74 75 76 99
    CORCH_DER (284) 73 74 75 76 99
    LLAVE_IZQ (285) 3
    LLAVE_DER (286) 3
    COMA (287) 15 25 77 79 81 83 92 94 95 101
    PYC (288) 14 43 44 85 89 91
    ASIGN (289) 85
    IVAR (290) 9
    FVAR (291) 9
    OP_BIN_MULTDIV (292) 53
    OP_RELACION (293) 54
    OP_IGUALDAD (294) 55
    OP_LOGICOS_OR (295) 56
    OP_LOGICOS_AND (296) 57
    OP_BINARIO_LISTAS (297)
    OP_TER_LIST (298)
    OP_MAS_MENOS (299) 49 50
    OP_UN_NEG (300) 48
    OP_UN_SHARP (301) 58
    OP_UN_QUEST (302) 59
    OP_MENOS_MENOS (303) 52
    OP_MAS_MAS (304) 51 61
    CONST_INT (305) 69 77 78
    CONST_FLOAT (306) 70 79 80
    CONST_BOOL (307) 71 81 82
    CONST_CHAR (308) 72 83 84


No terminales con las reglas donde aparecen

    $accept (54)
        on left: 0
    programa (55)
        on left: 1
        on right: 0
    bloque (56)
        on left: 3
        on right: 1 7 33
    $@1 (57)
        on left: 2
        on right: 3
    Declar_de_subprogs (58)
        on left: 4 5
        on right: 3 4
    Declar_subprog (59)
        on left: 7
        on right: 4
    $@2 (60)
        on left: 6
        on right: 7
    Declar_de_variables_locales (61)
        on left: 9 10
        on right: 3
    $@3 (62)
        on left: 8
        on right: 9
    decl_variables (63)
        on left: 11 12
        on right: 9 11
    lista_variables (64)
        on left: 14
        on right: 11 12
    $@4 (65)
        on left: 13
        on right: 14
    lista_ident (66)
        on left: 15 16 17
        on right: 14 15
    tipo (67)
        on left: 18 19
        on right: 14 21 24 25
    Cabecera_subprog (68)
        on left: 21
        on right: 7
    $@5 (69)
        on left: 20
        on right: 21
    lista_arg (70)
        on left: 22 23
        on right: 21
    argumentos (71)
        on left: 24 25 26
        on right: 22 25
    Sentencia_opt (72)
        on left: 27 28
        on right: 3
    Sentencias (73)
        on left: 30 32
        on right: 27 30
    $@6 (74)
        on left: 29
        on right: 30
    $@7 (75)
        on left: 31
        on right: 32
    Sentencia (76)
        on left: 33 34 35 36 37 38 39 40 41 42
        on right: 30 32 86 87 88 89
    sentencia_entrada (77)
        on left: 43
        on right: 36
    sentencia_salida (78)
        on left: 44
        on right: 37
    sentencia_listas (79)
        on left: 45 46
        on right: 41 97
    expresion (80)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 85 86 87 88 89 91 94 96 101 102
    constante (81)
        on left: 67 68
        on right: 63
    constante_base (82)
        on left: 69 70 71 72
        on right: 67
    constante_lista (83)
        on left: 73 74 75 76
        on right: 68
    constante_lista_int (84)
        on left: 77 78
        on right: 73 77
    constante_lista_float (85)
        on left: 79 80
        on right: 74 79
    constante_lista_bool (86)
        on left: 81 82
        on right: 75 81
    constante_lista_char (87)
        on left: 83 84
        on right: 76 83
    sentencia_asignacion (88)
        on left: 85
        on right: 40
    sentencia_if (89)
        on left: 86 87
        on right: 34
    sentencia_while (90)
        on left: 88
        on right: 35
    sentencia_repeat (91)
        on left: 89
        on right: 39
    sentencia_return (92)
        on left: 91
        on right: 38
    @8 (93)
        on left: 90
        on right: 91
    lista_variables_entrada (94)
        on left: 92 93
        on right: 43 92 99
    lista_expresiones_o_cadena (95)
        on left: 94 95 96 97 98
        on right: 44 94 95
    lista (96)
        on left: 99
        on right: 64
    llamada_funcion (97)
        on left: 100
        on right: 65
    lista_expresiones (98)
        on left: 101 102 103
        on right: 100 101


Estado 0

    0 $accept: • programa $end

    CABECERA_PROGRAMA  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: CABECERA_PROGRAMA • bloque

    LLAVE_IZQ  desplazar e ir al estado 3

    bloque  ir al estado 4


Estado 2

    0 $accept: programa • $end

    $end  desplazar e ir al estado 5


Estado 3

    3 bloque: LLAVE_IZQ • $@1 Declar_de_variables_locales Declar_de_subprogs Sentencia_opt LLAVE_DER

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 6


Estado 4

    1 programa: CABECERA_PROGRAMA bloque •

    $default  reduce usando la regla 1 (programa)


Estado 5

    0 $accept: programa $end •

    $default  aceptar


Estado 6

    3 bloque: LLAVE_IZQ $@1 • Declar_de_variables_locales Declar_de_subprogs Sentencia_opt LLAVE_DER

    IVAR  desplazar e ir al estado 7

    $default  reduce usando la regla 10 (Declar_de_variables_locales)

    Declar_de_variables_locales  ir al estado 8


Estado 7

    9 Declar_de_variables_locales: IVAR • $@3 decl_variables FVAR

    $default  reduce usando la regla 8 ($@3)

    $@3  ir al estado 9


Estado 8

    3 bloque: LLAVE_IZQ $@1 Declar_de_variables_locales • Declar_de_subprogs Sentencia_opt LLAVE_DER

    $default  reduce usando la regla 5 (Declar_de_subprogs)

    Declar_de_subprogs  ir al estado 10


Estado 9

    9 Declar_de_variables_locales: IVAR $@3 • decl_variables FVAR

    TIPO_PRIM   desplazar e ir al estado 11
    TIPO_LISTA  desplazar e ir al estado 12

    decl_variables   ir al estado 13
    lista_variables  ir al estado 14
    tipo             ir al estado 15


Estado 10

    3 bloque: LLAVE_IZQ $@1 Declar_de_variables_locales Declar_de_subprogs • Sentencia_opt LLAVE_DER
    4 Declar_de_subprogs: Declar_de_subprogs • Declar_subprog

    TIPO_PRIM   desplazar e ir al estado 11
    TIPO_LISTA  desplazar e ir al estado 12

    LLAVE_DER  reduce usando la regla 28 (Sentencia_opt)
    $default   reduce usando la regla 31 ($@7)

    Declar_subprog    ir al estado 16
    tipo              ir al estado 17
    Cabecera_subprog  ir al estado 18
    Sentencia_opt     ir al estado 19
    Sentencias        ir al estado 20
    $@7               ir al estado 21


Estado 11

   18 tipo: TIPO_PRIM •

    $default  reduce usando la regla 18 (tipo)


Estado 12

   19 tipo: TIPO_LISTA • TIPO_PRIM

    TIPO_PRIM  desplazar e ir al estado 22


Estado 13

    9 Declar_de_variables_locales: IVAR $@3 decl_variables • FVAR
   11 decl_variables: decl_variables • lista_variables

    TIPO_PRIM   desplazar e ir al estado 11
    TIPO_LISTA  desplazar e ir al estado 12
    FVAR        desplazar e ir al estado 23

    lista_variables  ir al estado 24
    tipo             ir al estado 15


Estado 14

   12 decl_variables: lista_variables •

    $default  reduce usando la regla 12 (decl_variables)


Estado 15

   14 lista_variables: tipo • $@4 lista_ident PYC

    $default  reduce usando la regla 13 ($@4)

    $@4  ir al estado 25


Estado 16

    4 Declar_de_subprogs: Declar_de_subprogs Declar_subprog •

    $default  reduce usando la regla 4 (Declar_de_subprogs)


Estado 17

   21 Cabecera_subprog: tipo • IDENTIFICADOR $@5 PAR_IZQ lista_arg PAR_DER

    IDENTIFICADOR  desplazar e ir al estado 26


Estado 18

    7 Declar_subprog: Cabecera_subprog • $@2 bloque

    $default  reduce usando la regla 6 ($@2)

    $@2  ir al estado 27


Estado 19

    3 bloque: LLAVE_IZQ $@1 Declar_de_variables_locales Declar_de_subprogs Sentencia_opt • LLAVE_DER

    LLAVE_DER  desplazar e ir al estado 28


Estado 20

   27 Sentencia_opt: Sentencias •
   30 Sentencias: Sentencias • $@6 Sentencia

    LLAVE_DER  reduce usando la regla 27 (Sentencia_opt)
    $default   reduce usando la regla 29 ($@6)

    $@6  ir al estado 29


Estado 21

   32 Sentencias: $@7 • Sentencia

    error           desplazar e ir al estado 30
    ID_IF           desplazar e ir al estado 31
    ID_WHILE        desplazar e ir al estado 32
    ID_REPEAT       desplazar e ir al estado 33
    ID_RETURN       desplazar e ir al estado 34
    NOMB_ENTRADA    desplazar e ir al estado 35
    NOMB_SALIDA     desplazar e ir al estado 36
    LISTA_SENT_IZQ  desplazar e ir al estado 37
    IDENTIFICADOR   desplazar e ir al estado 38
    LLAVE_IZQ       desplazar e ir al estado 3

    bloque                ir al estado 39
    Sentencia             ir al estado 40
    sentencia_entrada     ir al estado 41
    sentencia_salida      ir al estado 42
    sentencia_listas      ir al estado 43
    sentencia_asignacion  ir al estado 44
    sentencia_if          ir al estado 45
    sentencia_while       ir al estado 46
    sentencia_repeat      ir al estado 47
    sentencia_return      ir al estado 48


Estado 22

   19 tipo: TIPO_LISTA TIPO_PRIM •

    $default  reduce usando la regla 19 (tipo)


Estado 23

    9 Declar_de_variables_locales: IVAR $@3 decl_variables FVAR •

    $default  reduce usando la regla 9 (Declar_de_variables_locales)


Estado 24

   11 decl_variables: decl_variables lista_variables •

    $default  reduce usando la regla 11 (decl_variables)


Estado 25

   14 lista_variables: tipo $@4 • lista_ident PYC

    error          desplazar e ir al estado 49
    IDENTIFICADOR  desplazar e ir al estado 50

    lista_ident  ir al estado 51


Estado 26

   21 Cabecera_subprog: tipo IDENTIFICADOR • $@5 PAR_IZQ lista_arg PAR_DER

    $default  reduce usando la regla 20 ($@5)

    $@5  ir al estado 52


Estado 27

    7 Declar_subprog: Cabecera_subprog $@2 • bloque

    LLAVE_IZQ  desplazar e ir al estado 3

    bloque  ir al estado 53


Estado 28

    3 bloque: LLAVE_IZQ $@1 Declar_de_variables_locales Declar_de_subprogs Sentencia_opt LLAVE_DER •

    $default  reduce usando la regla 3 (bloque)


Estado 29

   30 Sentencias: Sentencias $@6 • Sentencia

    error           desplazar e ir al estado 30
    ID_IF           desplazar e ir al estado 31
    ID_WHILE        desplazar e ir al estado 32
    ID_REPEAT       desplazar e ir al estado 33
    ID_RETURN       desplazar e ir al estado 34
    NOMB_ENTRADA    desplazar e ir al estado 35
    NOMB_SALIDA     desplazar e ir al estado 36
    LISTA_SENT_IZQ  desplazar e ir al estado 37
    IDENTIFICADOR   desplazar e ir al estado 38
    LLAVE_IZQ       desplazar e ir al estado 3

    bloque                ir al estado 39
    Sentencia             ir al estado 54
    sentencia_entrada     ir al estado 41
    sentencia_salida      ir al estado 42
    sentencia_listas      ir al estado 43
    sentencia_asignacion  ir al estado 44
    sentencia_if          ir al estado 45
    sentencia_while       ir al estado 46
    sentencia_repeat      ir al estado 47
    sentencia_return      ir al estado 48


Estado 30

   42 Sentencia: error •

    $default  reduce usando la regla 42 (Sentencia)


Estado 31

   86 sentencia_if: ID_IF • PAR_IZQ expresion PAR_DER Sentencia
   87             | ID_IF • PAR_IZQ expresion PAR_DER Sentencia ID_ELSE Sentencia

    PAR_IZQ  desplazar e ir al estado 55


Estado 32

   88 sentencia_while: ID_WHILE • PAR_IZQ expresion PAR_DER Sentencia

    PAR_IZQ  desplazar e ir al estado 56


Estado 33

   89 sentencia_repeat: ID_REPEAT • Sentencia ID_UNTIL PAR_IZQ expresion PAR_DER PYC

    error           desplazar e ir al estado 30
    ID_IF           desplazar e ir al estado 31
    ID_WHILE        desplazar e ir al estado 32
    ID_REPEAT       desplazar e ir al estado 33
    ID_RETURN       desplazar e ir al estado 34
    NOMB_ENTRADA    desplazar e ir al estado 35
    NOMB_SALIDA     desplazar e ir al estado 36
    LISTA_SENT_IZQ  desplazar e ir al estado 37
    IDENTIFICADOR   desplazar e ir al estado 38
    LLAVE_IZQ       desplazar e ir al estado 3

    bloque                ir al estado 39
    Sentencia             ir al estado 57
    sentencia_entrada     ir al estado 41
    sentencia_salida      ir al estado 42
    sentencia_listas      ir al estado 43
    sentencia_asignacion  ir al estado 44
    sentencia_if          ir al estado 45
    sentencia_while       ir al estado 46
    sentencia_repeat      ir al estado 47
    sentencia_return      ir al estado 48


Estado 34

   91 sentencia_return: ID_RETURN • expresion @8 PYC

    error           desplazar e ir al estado 58
    IDENTIFICADOR   desplazar e ir al estado 59
    PAR_IZQ         desplazar e ir al estado 60
    CORCH_IZQ       desplazar e ir al estado 61
    OP_MAS_MENOS    desplazar e ir al estado 62
    OP_UN_NEG       desplazar e ir al estado 63
    OP_UN_SHARP     desplazar e ir al estado 64
    OP_UN_QUEST     desplazar e ir al estado 65
    OP_MENOS_MENOS  desplazar e ir al estado 66
    OP_MAS_MAS      desplazar e ir al estado 67
    CONST_INT       desplazar e ir al estado 68
    CONST_FLOAT     desplazar e ir al estado 69
    CONST_BOOL      desplazar e ir al estado 70
    CONST_CHAR      desplazar e ir al estado 71

    expresion        ir al estado 72
    constante        ir al estado 73
    constante_base   ir al estado 74
    constante_lista  ir al estado 75
    lista            ir al estado 76
    llamada_funcion  ir al estado 77


Estado 35

   43 sentencia_entrada: NOMB_ENTRADA • lista_variables_entrada PYC

    IDENTIFICADOR  desplazar e ir al estado 78

    lista_variables_entrada  ir al estado 79


Estado 36

   44 sentencia_salida: NOMB_SALIDA • lista_expresiones_o_cadena PYC

    error           desplazar e ir al estado 58
    LISTA_SENT_IZQ  desplazar e ir al estado 37
    IDENTIFICADOR   desplazar e ir al estado 80
    CADENA          desplazar e ir al estado 81
    PAR_IZQ         desplazar e ir al estado 60
    CORCH_IZQ       desplazar e ir al estado 61
    OP_MAS_MENOS    desplazar e ir al estado 62
    OP_UN_NEG       desplazar e ir al estado 63
    OP_UN_SHARP     desplazar e ir al estado 64
    OP_UN_QUEST     desplazar e ir al estado 65
    OP_MENOS_MENOS  desplazar e ir al estado 66
    OP_MAS_MAS      desplazar e ir al estado 67
    CONST_INT       desplazar e ir al estado 68
    CONST_FLOAT     desplazar e ir al estado 69
    CONST_BOOL      desplazar e ir al estado 70
    CONST_CHAR      desplazar e ir al estado 71

    sentencia_listas            ir al estado 82
    expresion                   ir al estado 83
    constante                   ir al estado 73
    constante_base              ir al estado 74
    constante_lista             ir al estado 75
    lista_expresiones_o_cadena  ir al estado 84
    lista                       ir al estado 76
    llamada_funcion             ir al estado 77


Estado 37

   45 sentencia_listas: LISTA_SENT_IZQ • IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 85

